--- a/index.html
+++ b/index.html
@@ -6,114 +6,65 @@
     <meta name="author" content="CodeHim">
     <title>Carrito de compras 🛒💯🔥✨</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-<main>
-  <header class="header">
-  <div class="container header__top">
-    
-    <div class="header__cart">
-      <ul>
-        <li class="header__submenu" id="submenu">
-          <button class="header__cart-btn" id="toggle-cart-btn"><svg class="cart" width="24" height="24" viewBox="0 0 24 24">
-  <path d="M17,18C15.89,18 15,18.89 15,20A2,2 0 0,0 17,22A2,2 0 0,0 19,20C19,18.89 18.1,18 17,18M1,2V4H3L6.6,11.59L5.24,14.04C5.09,14.32 5,14.65 5,15A2,2 0 0,0 7,17H19V15H7.42A0.25,0.25 0 0,1 7.17,14.75C7.17,14.7 7.18,14.66 7.2,14.63L8.1,13H15.55C16.3,13 16.96,12.58 17.3,11.97L20.88,5.5C20.95,5.34 21,5.17 21,5A1,1 0 0,0 20,4H5.21L4.27,2M7,18C5.89,18 5,18.89 5,20A2,2 0 0,0 7,22A2,2 0 0,0 9,20C9,18.89 8.1,18 7,18Z"></path>
-</svg></button>
-          <div id="shopping-cart" class="shopping-cart-container">
-            <table id="cart-content">
-              <thead>
-                <tr>
-                  <th>Image</th>
-                  <th>Name</th>
-                  <th>Price</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody></tbody>
-            </table>
-            <p class="total-container" id="total-price"></p>
-            <a href="#" id="clear-cart" class="cart-btn">Vaciar carrito</a>
-            <a href="#" id="checkout-btn" class="cart-btn">Checkout</a>
-          </div>
-        </li>
-      </ul>
+
+  <div class="contenedor">
+    <div class="top">
+      <h2>carrito de compras</h2>
+      <button class="carrito">🛒</button>
+    </div>
+
+    <div class="inner__elements">
+      <div class="element__container">
+        <div class="img__container">
+          <img src="./img/image-1.jpg" alt="image 1">
+        </div>
+        <div class="element__data">
+          <h3>element title 1</h3>
+          <div class="precio">$449.4</div>
+        </div>
+        <div class="counter__container">
+          <button class="mas">+</button>
+          <span class="placehold__number">0</span>
+          <button class="menos">-</button>
+        </div>
+      </div>
+      <div class="element__container">
+        <div class="img__container">
+          <img src="./img/image-1.jpg" alt="image 1">
+        </div>
+        <div class="element__data">
+          <h3>element title 2</h3>
+          <div class="precio">$449.4</div>
+        </div>
+        <div class="counter__container">
+          <button class="mas">+</button>
+          <span class="placehold__number">0</span>
+          <button class="menos">-</button>
+        </div>
+      </div>
+      <div class="element__container">
+        <div class="img__container">
+          <img src="./img/image-1.jpg" alt="image 1">
+        </div>
+        <div class="element__data">
+          <h3>element title 3 </h3>
+          <div class="precio">$449.4</div>
+        </div>
+        <div class="counter__container">
+          <button class="mas">+</button>
+          <span class="placehold__number">0</span>
+          <button class="menos">-</button>
+        </div>
+      </div>
+    </div>
+    <div>
+      <button class="checkout">checkout</button>
     </div>
   </div>
-</header>
-<main class="container page-content">
-  <div class="grid" id="grid">
-    <div class="card">
-      <img src="./img/image-1.jpg" class="card__image" alt="">
-      <div class="card__info">
-        <h4 class="card__title">Web Design for beginners</h4>
-        <p class="card__text">Maria A. Perna</p>
-        <p class="card__price">$200</p>
-        <button class="card__btn add-to-cart" data-id="6">Add to Cart</button>
-      </div>
-    </div>
-    <!--.card-->
-    <div class="card">
-      <img src="./img/image-2.jpg" class="card__image" alt="">
-      <div class="card__info">
-        <h4 class="card__title">Learn to cook Italian food</h4>
-        <p class="card__text">Mario the Chef</p>
-        <p class="card__price">$100</p>
-        <button class="card__btn add-to-cart" data-id="7">Add to Cart</button>
-      </div>
-    </div>
-    <!--.card-->
-    <div class="card">
-      <img src="./img/image-3.jpg" class="card__image" alt="">
-      <div class="card__info">
-        <h4 class="card__title">Learn Guitar</h4>
-        <p class="card__text">Joni Mitchell</p>
-        <p class="card__price">$150</p>
-        <button class="card__btn add-to-cart" data-id="8">Add to Cart</button>
-      </div>
-    </div>
-    <!--.card-->
-    <div class="card">
-      <img src="./img/image-4.jpg" alt="" class="card__image">
-      <div class="card__info">
-        <h4 class="card__title">Gardening 101</h4>
-        <p class="card__text">Jane Smith</p>
-        <p class="card__price">$50</p>
-        <button class="card__btn add-to-cart" data-id="9">Add to Cart</button>
-      </div>
-    </div>
-    <!--.card-->
-    <div class="card">
-      <img src="./img/image-5.jpg" alt="" class="card__image">
-      <div class="card__info">
-        <h4 class="card__title">Cook a Home-Made Cake</h4>
-        <p class="card__text">Antonietta Perna</p>
-        <p class="card__price">$100</p>
-        <button class="card__btn add-to-cart" data-id="10">Add to Cart</button>
-      </div>
-    </div>
-    <!--.card-->
-    <div class="card">
-      <img src="./img/image-6.jpg" alt="" class="card__image">
-      <div class="card__info">
-        <h4 class="card__title">Modern JavaScript</h4>
-        <p class="card__text">Maria A. Perna</p>
-        <p class="card__price">$300</p>
-        <button class="card__btn add-to-cart" data-id="11">Add to Cart</button>
-      </div>
-    </div>
-    <!--.card-->
-    <div class="card">
-      <img src="./img/image-7.jpg" alt="" class="card__image">
-      <div class="card__info">
-        <h4 class="card__title">Build Layouts with CSS Grid</h4>
-        <p class="card__text">John Doe</p>
-        <p class="card__price">$200</p>
-        <button class="card__btn add-to-cart" data-id="12">Add to Cart</button>
-      </div>
-    </div>
-    <!--.card-->
-  </div>
-</main>
-</main>
+
 <script  src="./js/script.js"></script>
 </body>
 </html>
