--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="contenedor">
     <div class="top">
       <h2>carrito de compras</h2>
-      <button class="carrito">🛒</button>
+      <button class="carrito">🛒 <span class="numeroCarrito">0</span></button>
     </div>
 
     <div class="inner__elements">
@@ -33,7 +33,7 @@
       </div>
       <div class="element__container">
         <div class="img__container">
-          <img src="./img/image-1.jpg" alt="image 1">
+          <img src="./img/image-2.jpg" alt="image 2">
         </div>
         <div class="element__data">
           <h3>element title 2</h3>
@@ -47,7 +47,7 @@
       </div>
       <div class="element__container">
         <div class="img__container">
-          <img src="./img/image-1.jpg" alt="image 1">
+          <img src="./img/image-3.jpg" alt="image 2">
         </div>
         <div class="element__data">
           <h3>element title 3 </h3>
