agregando estilos a todos los elementos

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="contenedor">
     <div class="top">
       <h2>carrito de compras</h2>
-      <button class="carrito">🛒 <span class="numeroCarrito">0</span></button>
+      <div class="carrito"><i class="fa-solid fa-bag-shopping"></i> <span class="numeroCarrito">0</span></div>
     </div>
 
     <div class="inner__elements">
