--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="CodeHim">
     <title>Carrito de compras 🛒💯🔥✨</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro@4cac1a6/css/all.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
 
