agregando nueva fuente de texto

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="precio">$449.4</div>
         </div>
         <div class="counter__container">
-          <button class="mas">+</button>
+          <button class="mas"><i class="fas fa-plus"></i></button>
           <span class="placehold__number">0</span>
           <button class="menos">-</button>
         </div>
@@ -40,9 +40,9 @@
           <div class="precio">$449.4</div>
         </div>
         <div class="counter__container">
-          <button class="mas">+</button>
+          <button class="mas"><i class="fas fa-plus"></i></button>
           <span class="placehold__number">0</span>
-          <button class="menos">-</button>
+          <button class="menos"><i class="fas fa-less"></i></button>
         </div>
       </div>
       <div class="element__container">
@@ -54,7 +54,7 @@
           <div class="precio">$449.4</div>
         </div>
         <div class="counter__container">
-          <button class="mas">+</button>
+          <button class="mas"><i class="fas fa-plus"></i></button>
           <span class="placehold__number">0</span>
           <button class="menos">-</button>
         </div>
