--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
   <div class="contenedor">
     <div class="top">
-      <h2>carrito de compras</h2>
       <div class="carrito"><i class="fa-solid fa-bag-shopping"></i> <span class="numeroCarrito">0</span></div>
     </div>
 
@@ -28,7 +27,7 @@
         <div class="counter__container">
           <button class="mas"><i class="fas fa-plus"></i></button>
           <span class="placehold__number">0</span>
-          <button class="menos">-</button>
+          <button class="menos"><i class="fas fa-minus"></i></button>
         </div>
       </div>
       <div class="element__container">
@@ -42,7 +41,7 @@
         <div class="counter__container">
           <button class="mas"><i class="fas fa-plus"></i></button>
           <span class="placehold__number">0</span>
-          <button class="menos"><i class="fas fa-less"></i></button>
+          <button class="menos"><i class="fas fa-minus"></i></button>
         </div>
       </div>
       <div class="element__container">
@@ -56,11 +55,12 @@
         <div class="counter__container">
           <button class="mas"><i class="fas fa-plus"></i></button>
           <span class="placehold__number">0</span>
-          <button class="menos">-</button>
+          <button class="menos"><i class="fas fa-minus"></i></button>
         </div>
       </div>
     </div>
-    <div>
+    <div class="boton__checkout__container">
+      <button class="checkout">boton 1</button>
       <button class="checkout">checkout</button>
     </div>
   </div>
