--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
         
         <div id="choices">
             <div>
-                <div>
-                    <img src="./images/egg.png" alt="Egg" id="egg"/>
-                    <div class="quantity">cantidad</div>
-                </div>
+                <div><img src="./images/egg.png" alt="Egg" id="egg"/></div>
                 <div><img src="./images/muffin.png" alt="muffin" id="muffin" /></div>
                 <div><img src="./images/pancake.png" alt="pancakes" id="pancake" /></div>
                 <div><img src="./images/biscuit.png" alt="biscuit" id="biscuit" /></div>
